# python

./: README.md  pyproject.toml
src/: main.py
src/greek/: __init__.py  characters.py  letter.py  text.py  word.py
